# me523-cfd-project

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: docs.yml
apps/: CMakeLists.txt  ib_solver.cpp  ns_solver.cpp
code/: CMakeLists.txt  config.h.in
code/executables/: CMakeLists.txt  ns_solver.cpp
code/src/: CMakeLists.txt
code/src/include/: structs.hpp
code/src/include/modules/: base_module.hpp  grid_module.hpp  initial_conditions_module.hpp  output_module.hpp  solver_module.hpp
code/src/modules/: grid_module.cpp  initial_conditions_module.cpp  output_module.cpp  solver_module.cpp
docs/: CMakeLists.txt  Doxyfile  spack_guide.md
hw_7_tex/: CLAUDE.md  code.tex  hw_7.tex  preamble.tex  prob1.tex  prompts.tex
hw_8_tex/: CLAUDE.md  hw_8.tex  prob1.tex  prompts.tex
include/: boundary_conditions.hpp  grid.hpp  immersed_boundary.hpp  initial_conditions.hpp  integrator.hpp  mac_grid_2d.hpp  multigrid.hpp  output.hpp  physics.hpp  pressure_solver.hpp  problem_traits.hpp  run_config.hpp  run_stats.hpp  sim_state.hpp  solver.hpp  structs.hpp  viscous_solver.hpp
plotting/: __init__.py  __main__.py  diagnostics.py  fields.py  loader.py  scaling.py  style.py
plotting_ib/: __init__.py  __main__.py  centerline.py  diagnostics.py  fields.py  loader.py  style.py
scripts/: build_with_spack.sh  env_greatlakes.sh  namelist_ico.txt  run_hw7.sh  scaling_study.sh  setup_spack.sh
spack/greatlakes/: spack.yaml
spack/hmorenom/: spack.yaml
spack/ncam/: spack.yaml
src/: CMakeLists.txt  grid.cpp  initial_conditions.cpp  output.cpp  physics.cpp  pressure_solver.cpp  solver.cpp
tests/: CMakeLists.txt  test_immersed_boundary.cpp  test_integrators.cpp  test_kinetic_energy.cpp  test_l2_divergence.cpp  test_output.cpp  test_pressure_solver.cpp  test_viscous_solver.cpp
