add_executable(test_output test_output.cpp)
target_link_libraries(test_output PRIVATE ns2d)
add_test(NAME OutputTest COMMAND test_output)

add_executable(test_pressure_solver test_pressure_solver.cpp)
target_link_libraries(test_pressure_solver PRIVATE ns2d)
add_test(NAME PressureSolverTest COMMAND test_pressure_solver)

add_executable(test_kinetic_energy test_kinetic_energy.cpp)
target_link_libraries(test_kinetic_energy PRIVATE ns2d)
add_test(NAME KineticEnergyTest COMMAND test_kinetic_energy)

add_executable(test_l2_divergence test_l2_divergence.cpp)
target_link_libraries(test_l2_divergence PRIVATE ns2d)
add_test(NAME L2DivergenceTest COMMAND test_l2_divergence)

add_executable(test_viscous_solver test_viscous_solver.cpp)
target_link_libraries(test_viscous_solver PRIVATE ns2d)
add_test(NAME ViscousSolverTest COMMAND test_viscous_solver)

add_executable(test_integrators test_integrators.cpp)
target_link_libraries(test_integrators PRIVATE ns2d)
add_test(NAME IntegratorsTest COMMAND test_integrators)
